[package]
name = "discord-pricebot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.12", features = ["client", "gateway", "http", "rustls_backend", "builder"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
